--- a/template/public/manifest.json
+++ b/template/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Aplicação React",
-  "name": "Template básico Dev Samurai",
+  "name": "Template básico Dev DataVisio",
   "icons": [
     {
       "src": "favicon.ico",
