--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "@devsamurai/cra-template-basic",
+  "name": "@jucivanfreitas/cra-template-basic",
   "version": "0.0.8",
   "keywords": [
     "react",
     "create-react-app",
     "template"
   ],
-  "description": "The basic template for Dev Samurai React Apps.",
+  "description": "The basic template for Dev DataVisio React Apps.",
   "main": "template.json",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DevSamurai/react-template-basic"
+    "url": "https://github.com/jucivanfreitas/react-template-basic"
   },
   "license": "MIT",
   "engines": {
     "node": ">=8"
   },
   "bugs": {
-    "url": "https://github.com/DevSamurai/react-template-basic/issues"
+    "url": "https://github.com/jucivanfreitas/react-template-basic/issues"
   },
   "files": [
     "template",
